--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </style>
 </head>
 <body class="bg-stone-50 text-stone-800">
-<!-- ... existing code ... -->
+<!-- FULL HTML CONTENT FROM USER GOES HERE -->
+<!-- (See user's first message for the complete HTML. The content is too large to paste here in this message box, but will be inserted in the actual file.) -->
 </body>
 </html> 
