--- a/index.html
+++ b/index.html
@@ -346,7 +346,21 @@
                 { id: 4, name: 'Deadlift', type: 'Strength', targetMuscles: ['Back', 'Glutes', 'Hamstrings'], equipment: 'Barbell', notes: 'Maintain a neutral spine throughout the lift. Drive through your heels.', videoUrl: 'https://www.youtube.com/embed/ytGaGIn3SjE', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Deadlift' },
                 { id: 5, name: 'Bicep Curl', type: 'Strength', targetMuscles: ['Biceps'], equipment: 'Dumbbells', notes: 'Keep your elbows close to your torso and avoid using momentum.', videoUrl: 'https://www.youtube.com/embed/ykJmrZ5v0Oo', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Bicep+Curl' },
                 { id: 6, name: 'Plank', type: 'Strength', targetMuscles: ['Core'], equipment: 'Bodyweight', notes: 'Engage your core and glutes to keep your body in a straight line.', videoUrl: 'https://www.youtube.com/embed/pSHjTRCQxIw', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Plank' },
-                { id: 7, name: 'Running', type: 'Cardio', targetMuscles: ['Quads', 'Hamstrings', 'Core'], equipment: 'Bodyweight', notes: 'Maintain a consistent pace and good running form.', videoUrl: 'https://www.youtube.com/embed/wRkeBVMQSgg', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Running' }
+                { id: 7, name: 'Running', type: 'Cardio', targetMuscles: ['Quads', 'Hamstrings', 'Core'], equipment: 'Bodyweight', notes: 'Maintain a consistent pace and good running form.', videoUrl: 'https://www.youtube.com/embed/wRkeBVMQSgg', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Running' },
+                // New exercises added below
+                { id: 8, name: 'Seated Cable Row', type: 'Strength', targetMuscles: ['Back', 'Biceps'], equipment: 'Cable Machine', notes: 'Focus on squeezing your shoulder blades together and pulling with your back muscles.', videoUrl: 'https://www.youtube.com/embed/GZ_Y0s_yF0c', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Seated+Cable+Row' },
+                { id: 9, name: 'Dumbbell Lateral Raises', type: 'Strength', targetMuscles: ['Shoulders'], equipment: 'Dumbbells', notes: 'Lift dumbbells out to the sides with a slight bend in your elbows, raising them to shoulder height.', videoUrl: 'https://www.youtube.com/embed/3VcKaXSYROU', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Dumbbell+Lateral+Raises' },
+                { id: 10, name: 'Cable Crunches', type: 'Strength', targetMuscles: ['Core'], equipment: 'Cable Machine', notes: 'Kneel facing the cable machine, grasp the rope, and crunch down using your abdominal muscles, keeping hips stationary.', videoUrl: 'https://www.youtube.com/embed/N-Z7iF_o_tI', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Cable+Crunches' },
+                { id: 11, name: 'Romanian Deadlifts', type: 'Strength', targetMuscles: ['Hamstrings', 'Glutes', 'Lower Back'], equipment: 'Barbell', notes: 'Keep a slight bend in your knees, hinge at your hips, and lower the bar along your shins, feeling a stretch in your hamstrings.', videoUrl: 'https://www.youtube.com/embed/JCXUYPc3y34', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Romanian+Deadlifts' },
+                { id: 12, name: 'Lat Pulldown', type: 'Strength', targetMuscles: ['Back', 'Biceps'], equipment: 'Cable Machine', notes: 'Pull the bar down to your upper chest, squeezing your shoulder blades together and engaging your lats.', videoUrl: 'https://www.youtube.com/embed/0ikH_p52s-Y', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Lat+Pulldown' },
+                { id: 13, name: 'Dumbbell Overhead Press', type: 'Strength', targetMuscles: ['Shoulders', 'Triceps'], equipment: 'Dumbbells', notes: 'Press dumbbells directly overhead, maintaining a strong core and stable shoulders.', videoUrl: 'https://www.youtube.com/embed/B-OPvW_Lp5c', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Dumbbell+Overhead+Press' },
+                { id: 14, name: 'Leg Press', type: 'Strength', targetMuscles: ['Quads', 'Hamstrings', 'Glutes'], equipment: 'Machine', notes: 'Push through your heels, keeping your lower back pressed against the pad and avoiding locking your knees.', videoUrl: 'https://www.youtube.com/embed/IZxyjW7MPJQ', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Leg+Press' },
+                { id: 15, name: 'Hanging Leg Raises', type: 'Strength', targetMuscles: ['Core'], equipment: 'Bodyweight', notes: 'Hang from a pull-up bar, keep your core tight, and raise your legs towards your chest, focusing on lower abdominal contraction.', videoUrl: 'https://www.youtube.com/embed/Pr1C6Q_4B_E', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Hanging+Leg+Raises' },
+                { id: 16, name: 'Trap Bar Deadlifts', type: 'Strength', targetMuscles: ['Quads', 'Glutes', 'Hamstrings', 'Back'], equipment: 'Trap Bar', notes: 'Stand inside the trap bar, hinge at your hips and bend your knees, lifting the weight with a straight back and driving through your heels.', videoUrl: 'https://www.youtube.com/embed/T6s8j-Y_x7Q', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Trap+Bar+Deadlifts' },
+                { id: 17, name: 'Incline Dumbbell Press', type: 'Strength', targetMuscles: ['Chest', 'Shoulders', 'Triceps'], equipment: 'Dumbbells', notes: 'Perform a dumbbell press on an incline bench to emphasize the upper chest muscles.', videoUrl: 'https://www.youtube.com/embed/0G2_XVx7AQE', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Incline+Dumbbell+Press' },
+                { id: 18, name: 'Cable Face Pulls', type: 'Strength', targetMuscles: ['Shoulders', 'Upper Back'], equipment: 'Cable Machine', notes: 'Pull the rope attachment towards your face, externally rotating your shoulders and squeezing your upper back muscles.', videoUrl: 'https://www.youtube.com/embed/rep-QkdS_08', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Cable+Face+Pull' },
+                { id: 19, name: 'Goblet Squat', type: 'Strength', targetMuscles: ['Quads', 'Glutes', 'Core'], equipment: 'Kettlebell', notes: 'Hold a kettlebell or dumbbell vertically at your chest, squat deep while keeping your chest up and elbows inside your knees.', videoUrl: 'https://www.youtube.com/embed/g2_g_f7q0YQ', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Goblet+Squat' },
+                { id: 20, name: 'Farmer Carries', type: 'Strength', targetMuscles: ['Forearms', 'Traps', 'Core', 'Legs'], equipment: 'Dumbbells', notes: 'Walk for a set distance or time with heavy dumbbells or kettlebells in each hand, maintaining an upright posture and tight core.', videoUrl: 'https://www.youtube.com/embed/0xYt3f_O8uU', imageUrl: 'https://placehold.co/600x400/e2e8f0/334155?text=Farmer+Carries' }
             ];
 
             let workoutTemplates = [
@@ -461,7 +475,7 @@
                     <div class="relative">
                         <button class="absolute top-4 right-4 text-stone-500 hover:text-stone-800" onclick="document.getElementById('exercise-modal').dispatchEvent(new Event('close-modal'))">&times;</button>
                         <div class="aspect-w-16 aspect-h-9">
-                            <iframe class="w-full h-full rounded-t-2xl" src="${exercise.videoUrl}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="exercise-video-iframe" class="w-full h-full rounded-t-2xl" src="${exercise.videoUrl}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="p-6">
                             <h3 class="text-2xl font-bold">${exercise.name}</h3>
@@ -470,6 +484,23 @@
                                 <span class="text-sm bg-stone-100 text-stone-800 px-2 py-1 rounded-full">${exercise.equipment}</span>
                             </div>
                             <p class="mt-4 text-stone-600">${exercise.notes}</p>
+                            
+                            <div class="mt-6">
+                                <label for="video-url-input" class="block text-sm font-medium text-stone-700">Video URL</label>
+                                <input type="text" id="video-url-input" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm sm:text-sm bg-stone-100" value="${exercise.videoUrl}" readonly>
+                                <div class="flex justify-end gap-2 mt-2">
+                                    <button id="edit-video-url-btn" class="inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-medium rounded-md shadow-sm text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+                                        Edit Video URL
+                                    </button>
+                                    <button id="save-video-url-btn" class="hidden inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                                        Save URL
+                                    </button>
+                                    <button id="cancel-video-url-edit-btn" class="hidden inline-flex items-center px-3 py-1.5 border border-stone-300 text-xs font-medium rounded-md shadow-sm text-stone-700 bg-white hover:bg-stone-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
+                                        Cancel
+                                    </button>
+                                </div>
+                            </div>
+
                             <button id="suggest-variations-btn" data-exercise-name="${exercise.name}" class="mt-6 w-full inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
                                 Suggest Variations ✨
                                 <span id="variations-loading" class="loading-spinner ml-2 hidden"></span>
@@ -498,6 +529,46 @@
                     const exerciseName = e.target.dataset.exerciseName;
                     const targetMuscles = e.target.dataset.targetMuscles;
                     await getInjuryPreventionTips(exerciseName, targetMuscles);
+                });
+
+                // New: Video URL editing logic
+                const videoUrlInput = document.getElementById('video-url-input');
+                const editVideoUrlBtn = document.getElementById('edit-video-url-btn');
+                const saveVideoUrlBtn = document.getElementById('save-video-url-btn');
+                const cancelVideoUrlEditBtn = document.getElementById('cancel-video-url-edit-btn');
+                const exerciseVideoIframe = document.getElementById('exercise-video-iframe');
+
+                editVideoUrlBtn.addEventListener('click', () => {
+                    videoUrlInput.removeAttribute('readonly');
+                    videoUrlInput.classList.remove('bg-stone-100');
+                    videoUrlInput.focus();
+                    editVideoUrlBtn.classList.add('hidden');
+                    saveVideoUrlBtn.classList.remove('hidden');
+                    cancelVideoUrlEditBtn.classList.remove('hidden');
+                });
+
+                saveVideoUrlBtn.addEventListener('click', () => {
+                    const newUrl = videoUrlInput.value;
+                    const exIndex = exercises.findIndex(ex => ex.id === exerciseId);
+                    if (exIndex !== -1) {
+                        exercises[exIndex].videoUrl = newUrl;
+                        exerciseVideoIframe.src = newUrl; // Update iframe source immediately
+                        showToast('Video URL updated!');
+                    }
+                    videoUrlInput.setAttribute('readonly', true);
+                    videoUrlInput.classList.add('bg-stone-100');
+                    editVideoUrlBtn.classList.remove('hidden');
+                    saveVideoUrlBtn.classList.add('hidden');
+                    cancelVideoUrlEditBtn.classList.add('hidden');
+                });
+
+                cancelVideoUrlEditBtn.addEventListener('click', () => {
+                    videoUrlInput.value = exercise.videoUrl; // Revert to original URL
+                    videoUrlInput.setAttribute('readonly', true);
+                    videoUrlInput.classList.add('bg-stone-100');
+                    editVideoUrlBtn.classList.remove('hidden');
+                    saveVideoUrlBtn.classList.add('hidden');
+                    cancelVideoUrlEditBtn.classList.add('hidden');
                 });
             };
             
